--- a/README
+++ b/README
@@ -1,12 +1,11 @@
-GStreamer 0.10 plugin for Cedar h264 hardware encoding with no binary blobs.
+GStreamer 1.0 plugin for Cedar h264 hardware encoding with no binary blobs.
 
 Based on PoC h264 encoder by Jens Kuske:
 https://github.com/jemk/cedrus/tree/master/h264enc
 
 Usage:
 
-gst-launch -ve videotestsrc ! cedar_h264enc ! h264parse ! matroskamux ! filesink location="cedar.mkv"
+gst-launch-1.0 -ve videotestsrc ! cedar_h264enc ! h264parse ! matroskamux ! filesink location="cedar.mkv"
 
-gst-launch -ve videotestsrc ! cedar_h264enc ! ffmux_mp4 ! filesink location="cedar.mp4"
 
 Tested up to 1080p.
